fix index page not vertical align center, fix file name

--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -190,7 +190,7 @@
 
 svg {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 
 svg text {
